--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "build": "nuxt build",
         "start": "nuxt start",
         "generate": "nuxt generate",
-        "heroku-postbuild": "npm audit fix"
+        "heroku-prebuild": "npm audit fix"
     },
     "dependencies": {
         "@nuxtjs/auth": "^4.9.1",
