--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "dev": "nuxt",
         "build": "nuxt build",
         "start": "nuxt start",
-        "generate": "nuxt generate",
+        "generate": "nuxt generate"
     },
     "dependencies": {
         "@nuxtjs/auth": "^4.9.1",
